# monitoring-AIOps-AWS

./: .dockerignore  .gitignore  CLAUDE.md  README.md  buildspec.yml  pyproject.toml
.github/workflows/: api-ci.yml  drift-lambda-build.yml  ml-pipeline-trigger.yml  terraform-apply.yml  terraform-plan.yml
api/scoring/: Dockerfile  main.py  requirements.txt  schemas.py
api/scoring/services/: __init__.py  alert_store.py  auth.py  observability.py  sagemaker_invoker.py
argocd/applications/: app-of-apps.yaml  recommendation-api.yaml
demo-app/: README.md
demo-app/api/: requirements.txt
demo-app/api/app/: db.py  main.py
demo-app/docs/: signal-flow.md
demo-app/helm/demo-service/: values-api.yaml  values-web.yaml  values-worker.yaml  values.yaml
demo-app/infra/: PRODUCTION-CHECKLIST.md  main.tf  outputs.tf  variables.tf
demo-app/traffic-gen/: README.md  k8s-cronjob.yaml
demo-app/web/: nginx.conf
docs/: PRODUCTION-CHECKLIST.md  WORKFLOW.md  architecture.md  slo-definitions.md
docs/learn/: Anti-Cheat_Fraud_Detection_Platform_AWS_3-Page_Summary.docx  MLOPS-LEARNING-GUIDE.docx  MLOPS-LEARNING-GUIDE.md  monitoring-mlops-AWS_3-Page_Summary.docx  monitoring-mlops-AWS_Deep_Dive_Illustrated_Guide.docx
docs/runbooks/: anomaly-storm.md  bring-your-own-model.md  brute-force-detected.md  ddos-detected.md  demo-app-walkthrough.md  false-positive-review.md  model-cold-start.md
helm/cluster-addons/: helmfile.yaml
infra /: backend.tf  bootstrap_state.sh  main.tf  outputs.tf  variables.tf
ml/feature_engineering/: __init__.py  security_features.py
ml/monitoring/: baseline.py  drift_detector.py  lambda_handler.py
ml/parsers/: __init__.py  alb.py  app.py  cloudfront.py  eks.py  kafka.py  metrics.py  mongodb.py  mysql.py  nginx.py  otel.py  redis.py  waf.py
ml/streaming/: __init__.py  detector.py  lambda_handler.py
scripts/: import_pretrained_model.py  inject_attack.py  seed_logs.py  smoke_test.sh  teardown.sh
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_features.py  test_parsers.py  test_streaming_detector.py
(+115 files in other folders)
