[project]
name = "mlops-learning"
version = "0.1.0"
description = "Personalized Learning Engine — MLOps pipeline + API"
requires-python = ">=3.11"
authors = [{ name = "Owner" }]

dependencies = [
  # Core API
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "starlette>=0.39",

  # ML
  "scikit-learn==1.5.2",
  "joblib==1.4.2",
  "numpy==1.26.4",
  "pandas==2.2.2",
  "pyarrow==17.0.0",

  # AWS
  "boto3==1.35.0",
  "aiobotocore==2.13.0",

  # Auth & observability
  "python-jose[cryptography]==3.3.0",
  "prometheus-client==0.20.0",
  "opentelemetry-api==1.27.0",
  "opentelemetry-sdk==1.27.0",
  "opentelemetry-instrumentation-fastapi==0.48b0",
  "opentelemetry-exporter-otlp-proto-http==1.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.6",
  "mypy>=1.11",
  "locust>=2.30",
]
sagemaker = [
  "sagemaker>=2.230",
  "torch>=2.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "ml*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning:starlette.*",
  "ignore::DeprecationWarning:fastapi.*",
]

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["api", "ml", "scripts", "tests"]
extend-exclude = [".venv", "artifacts", "data", "infra "]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "RUF"]
ignore = [
  "E501",  # let formatter handle long lines
  "S101",  # asserts in tests are fine
  "S311",  # we use random for synthetic data, not crypto
  "B008",  # FastAPI dependency-injection style
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B", "RUF"]
"scripts/**" = ["S"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
plugins = []
exclude = ["artifacts", "data", "infra "]
